# nbcollate

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
nbcollate/: __init__.py  cli.py  nbcollate.py  version.py
scripts/: nbcollate
tests/: README.md  helpers.py  test_nbcollate.py
tests/files/: assignment-collated.ipynb  assignment.ipynb  collated.ipynb  deduped.ipynb  dups-1.ipynb  dups-2.ipynb  sorted-1.ipynb  sorted-2.ipynb  sorted.ipynb  student-1.ipynb  student-2.ipynb  student-3.ipynb  student-4.ipynb
